/**
 * Інтерфейс процесу розробки логотипу
 */
public interface ILogoProcess {
    /**
     * Метод для надсилання концептів логотипу
     */
    void sendConcepts();
    
    /**
     * Метод для надсилання фінальних файлів
     */
    void sendFinalFiles();
}