classDiagram
    %% Інтерфейс
    class ILogoProcess {
        <<interface>>
        +sendConcepts()
        +sendFinalFiles()
    }

    %% Абстрактний клас
    class Person {
        <<abstract>>
        -name: String
        +Person(name: String)
        +getName(): String
        +setName(name: String)
        #finalizeContract()$
    }

    %% Designer
    class Designer {
        +Designer(name: String)
        +sendConcepts()
        +sendFinalFiles()
        +createGuideline(): Guideline
    }

    %% --- НОВІ ТА ОНОВЛЕНІ КЛАСИ ДЛЯ DI ---

    %% Customer (Оновлено: додано DesignService)
    class Customer {
        -designService: DesignService
        +Customer(designService: DesignService)
        +fillBrief(): Brief
        +acceptConcepts()
        +approveEdits()
    }

    %% DesignService (Новий клас сервісу)
    class DesignService {
        -connection: Connection
        +DesignService(connection: Connection)
        +saveBrief(brief: Brief)
    }

    %% DesignModule (Новий клас модуля Guice)
    class DesignModule {
        <<Guice Module>>
        +configure()
        +provideConnection(url: String): Connection
    }

    %% JDBC Classes (Для відображення роботи з БД)
    class Connection {
        <<JDBC Interface>>
    }

    class SQLiteDriver {
        <<JDBC Driver>>
    }

    %% Brief (Оновлено поля)
    class Brief {
        -title: String
        -description: String
        +Brief(title: String)
        +getTitle(): String
        +getDescription(): String
    }

    %% --- ІНШІ КЛАСИ ---

    %% Guideline
    class Guideline {
        -fileUrl: String
        +Guideline(url: String)
        +download()
    }

    %% Logo
    class Logo {
        -conceptNum: int
        +Logo(num: int)
        +showConcept()
    }

    %% --- ВІДНОСИНИ ---

    %% Спадкування
    Person <|-- Designer : Наслідування
    Person <|-- Customer : Наслідування
    
    %% Реалізація інтерфейсів
    Designer ..|> ILogoProcess : Реалізація
    SQLiteDriver --|> Connection : Реалізація

    %% Впровадження залежностей (DI)
    DesignModule ..> Connection : <<provides>>
    DesignService o-- Connection : Агрегація (використовує)
    Customer *-- DesignService : Композиція (впроваджено)
    
    %% Використання даних
    Customer ..> Brief : Створює
    DesignService ..> Brief : Зберігає (Uses)

    %% Інші зв'язки
    Designer o-- Guideline : Агрегація
    Designer *-- Logo : Композиція

    %% Нотатки
    note for DesignModule "Налаштовує Guice\nта створює з'єднання з БД"
    note for Customer "Отримує сервіс через конструктор\nта зберігає бриф у БД"